# rust3ds-template

./: .gitignore  .travis.yml  3ds.json  Cargo.toml  Makefile  README.md  Xargo.toml  build.rs
.cargo/: config
docker/: Dockerfile  run_in_docker.sh
src/: main.rs
