[package]
description = "Nintendo 3DS project template"
name = "rust3ds-template"
version = "0.1.0"
build = "build.rs"

[dependencies]
ctru-rs = { git = "https://github.com/Furyhunter/ctru-rs", rev = "c2c030f" } 
alloc_system3ds = { git = "https://github.com/Furyhunter/alloc_system3ds" }

[profile.dev]
panic = 'abort'

[profile.release]
lto = true
panic = 'abort'
