[package]
description = "Nintendo 3DS project template"
name = "rust3ds-template"
version = "0.1.0"
build = "build.rs"

[dependencies]
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs", rev = "7337abc" }
alloc_system3ds = { git = "https://github.com/rust3ds/alloc_system3ds", rev = "da38c94" }

[profile.dev]
lto = true
panic = 'abort'

[profile.release]
lto = true
panic = 'abort'
