[package]
description = "Nintendo 3DS project template"
name = "rust3ds-template"
version = "0.1.0"

[dependencies]
ctru-rs = { git = "https://github.com/FenrirWolf/ctru-rs" , branch = "builtins" }
alloc_system3ds = { git = "https://github.com/rust3ds/alloc_system3ds", rev = "da38c94" }

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'
